Fix omnibox popup on iPhone X screen rotation.

Bug: 784841, 786552
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I9469e3b2d69135ff7e39977ef0f50b7cb4ac72a4
Reviewed-on: https://chromium-review.googlesource.com/777585
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517821}
Former-commit-id: b2e3ad14a8883fa0fe6b4da67aa2753860ae364e